Fix buttons being to small on smaller screens of Simon Game

--- a/Front_End_Development_Certification/Simon_Game/style.css
+++ b/Front_End_Development_Certification/Simon_Game/style.css
@@ -36,7 +36,7 @@ main {
   box-shadow: 2px 2px 5px #000;
   cursor: pointer;
   height: 5rem;
-  margin: 2rem;
+  margin: 2rem 1rem;
   width: 100%;
 }
 .green-btn {
@@ -58,6 +58,12 @@ footer {
 }
 footer p {
   display: inline;
+}
+
+@media only screen and (min-width: 576px) {
+  .game-btn {
+    margin: 2rem;
+  }
 }
 
 @media only screen and (min-width: 992px) {
